bluec-tests/tests/invalid/types_pointer/static_init2.c
int value = 1;
int *ptr = &value + 1.0f;

int main(void)
{
    return 0;
}
